copied modules from my project new-pet-clinic with thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username=petclinic
 spring.datasource.password=Moto#2628
 
 spring.banner.image.location=paw.jpg
+
+jwt.token.secret=security
+jwt.token.expired=3600000
+
