added endpoints for vets, changed security key

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.password=Moto#2628
 
 spring.banner.image.location=paw.jpg
 
-jwt.token.secret=security
+jwt.token.secret=securitysecuritysecuritysecuritysecuritysecurity
 jwt.token.expired=3600000
 
